    `iseig' was ignored).

  - Added a boolean option `wfrot'.  If set, `wplot' reads a unitary
    matrix from `case.wfrot' to be applied to the WFs before plotting.

  - Removed the `nD' grid types for n=0,1,2 a redundant; i.e., only
    the options `ANY' and `3D' remain.  Lower-dimensional grids can
    easily be generated as special cases of `3D', or using `ANY'.

A script `checkinwplot' is provided that checks an input file for
conformance to the new format and converts old-style input files.  `x
wplot' calls this script automatically.

Bugfixes and enhancements include:

* In `write_win':

  - fixed calculation of atom positions; `atoms_cart' is the default
    over `atoms_frac' because it appears to behave better numerically

  - fixed handling of Wannier90 options given on the command line

  - fixed bugs related to `mp_grid', `bands_plot', and
    `guiding_centres'

  - implemented support for both old-format (5-digit integers) and
    new-format (10-digit integers) `klist' files

* In `w2w':

  - adapted `w2w' to work with `-p -so'

  - fixed crashes with an error ``read statement [from vectorso]
    requires too much data'' in the presence of SOC

  - fixed spurious complex conjugation in `case.mmn'

  - fixed a bug resulting in segmentation faults for some cases

* Fixed the normalization of real-space Wannier functions in
  `case.psink' by number of k-points (previously, the WFs as printed
  included a factor of `N_k')

* Fixed a Makefile bug affecting `w2w' and `wplot' where real and
  complex modules were mixed (cf. mailing list <goo.gl/WbMb0w>).

Many thanks to Marc Höppner, Hong Jiang, Okan Köksal, Gernot
Kraberger, Laurence Marks, Oleg Rubel, Liang Si, Yundi Quan, Ulrich
Wedig, Jiaxu Yan, Jianxin Zhu, and Manuel Zingl for their valuable
comments on past versions.

================

Version 1.0 represents a major overhaul of the user interface.  In
particular:

* Wien2k integration:

  - (most) wien2wannier programs are now called via Wien2k's `x'